timed (2.44) unstable; urgency=low

  * Fixes: NB#246188 - timed <-> dsme communication broken
  * minor scratchbox improvements
  * fixed missing events due to missing transition queue processing
  * not moving not necessary events to 'waiting' state

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 12 Apr 2011 22:12:09 +0200

timed (2.43) unstable; urgency=low

  * Fixes: NB*244569  - get rid of warnings by using -Werror
  * Getting session bus address via aegis-session

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Fri, 08 Apr 2011 09:24:33 +0300

timed (2.42) unstable; urgency=low

  * Fixes: NB#243631 - ignore DST if nothing else helps to find time zone

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 05 Apr 2011 18:42:21 +0300

timed (2.41) unstable; urgency=low

  * Fixes: NB#242208 - get_attributes_by_cookie[s], get_cookies_by_attributes
  * Using init_done and desktop_visible signals

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 04 Apr 2011 21:05:35 +0300

timed (2.40) unstable; urgency=low

  * Fixes: NB#226599 - moving services to the system bus

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Sun, 03 Apr 2011 18:38:38 +0200

timed (2.38) unstable; urgency=low

  * Fixes: NB#234636 - language used in ntp.h is not quite c++ :)

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 09 Mar 2011 13:00:39 +0200

timed (2.37) unstable; urgency=low

  * compiling .type files into the timed binary
  * NTP client is working, no interface yet
  * Changing log level on the fly
  * Logging in unmountable directory
  * Fixes: NB#225485 - cancel_events()
  * versioned dependencies
  * some minor stuff

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 17 Feb 2011 14:09:26 +0200

timed (2.36) unstable; urgency=low

  * new csd layer, better cellular stuff logging
  * new methods: fake_csd_time_signal, fake_csd_time_signal_now
  * new tzdata layer (needs only 3 data base files)
  * peer information asked from dbus daemon for logging